--- a/index.html
+++ b/index.html
@@ -37,20 +37,45 @@
 
     />
 
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.11/index.global.min.js'></script>
-    <script src='fullcalendar/dist/index.global.js'></script>
-    <script src='fullcalendar/core/index.global.js'></script>
-    <script src='fullcalendar/core/locales/es.global.js'></script>
+    <script src =
+
+        "https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js">
+
+    </script>
+
+    <script src = 
+
+        'https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.11/index.global.min.js'>
+
+    </script>
+
+    <script src =
+
+        'fullcalendar/dist/index.global.js'>
+
+    </script>
+
+    <script src =
+
+        'fullcalendar/core/index.global.js'>
+
+    </script>
+
+    <script src =
+
+        'fullcalendar/core/locales/es.global.js'>
+
+    </script>
    
-    </script>
+    <script src =
 
-        <script src='./JavaScript/Calendario.js'>
-
-    </script>
+        './JavaScript/Calendario.js'>
 
     </script>
 
-        <script src='./JavaScript/Cadastrar.email.js'>
+    <script src = 
+
+        './JavaScript/Cadastrar.email.js'> 
 
     </script>
 
@@ -99,8 +124,6 @@
             </a>
         
         </nav>
-
-
 
     </header>
 
@@ -315,6 +338,22 @@
 
     <footer class="rodape">
 
+        <p class="rodape__texto">
+
+            Endereço: em algum lugar da terra 
+
+        </p>
+
+        <p class="rodape__texto">
+
+
+            telefone para contato: (numeros de telefone) (numeros de telefone - 2)
+
+
+        </p>
+
+        <img class="rodape__logo" src="./imagens/UsadasNoSite/header/logo-placeholder-image.png" alt="icone da Tenda espirita são Jeronimo">
+
         <section class="rodape__temporario">
 
             <h5 class="rodape__temporario__titulo">
@@ -328,8 +367,6 @@
     </footer>
 
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
-
-
 
 <script>
 
